--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 :root {
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #000000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -30,8 +31,14 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+
+}
+
+#root {
+  margin: auto;
+  place-self: center;
+  /*margin-top: auto;
+  margin-bottom: auto;*/
 }
 
 h1 {
